tests/traces.txt
clang -ggdb3 -O0 -std=c99 -Wall -Werror    test.c  -lcs50 -lm -o test
test.c:3:5: error: implicitly declaring library function 'printf' with type 'int (const char *, ...)' [-Werror]
    printf("hello, world\n");
    ^
test.c:3:5: note: please include the header <stdio.h> or explicitly provide a declaration for 'printf'
1 error generated.
make: *** [test] Error 1


test.c:3:5: error: implicit declaration of function 'pintf' is invalid in C99 [-Werror,-Wimplicit-function-declaration]
    pintf("hello, world\n");
    ^

test.c:3:5: error: use of undeclared identifier 'x'
    x = 3;
    ^

test.c:4:33: error: use of undeclared identifier 'x'
    printf("hello, world %d\n", x);
                                ^

test.c:4:33: error: variable 'x' is uninitialized when used here [-Werror,-Wuninitialized]
    printf("hello, world %d\n", x);
                                ^
test.c:3:10: note: initialize the variable 'x' to silence this warning
    int x;
         ^
          = 0

test.c:3:14: error: use of undeclared identifier 'NULL'
    int *x = NULL;


test.c:4:33: error: format specifies type 'int' but the argument has type 'int *' [-Werror,-Wformat]
    printf("hello, world %d\n", x);
                         ~~     ^

test.c:4:5: error: use of undeclared identifier 'string'; did you mean 'stdin'?
    string x = GetString();
    ^~~~~~
    stdin
/usr/include/stdio.h:168:25: note: 'stdin' declared here
extern struct _IO_FILE *stdin;          /* Standard input stream.  */
                        ^

test.c:4:11: error: expected ';' after expression
    string x = GetString();
          ^
          ;

test.c:4:5: error: expression result unused [-Werror,-Wunused-value]
    string x = GetString();
    ^~~~~~

test.c:4:16: error: implicit declaration of function 'GetString' is invalid in C99 [-Werror,-Wimplicit-function-declaration]
    string x = GetString();
               ^

test.c:4:15: error: implicit declaration of function 'GetString' is invalid in C99 [-Werror,-Wimplicit-function-declaration]
    char *x = GetString();
              ^

test.c:4:11: error: incompatible integer to pointer conversion initializing 'char *' with an expression of type 'int' [-Werror,-Wint-conversion]
    char *x = GetString();
          ^   ~~~~~~~~~~~

/tmp/test-962a6e.o: In function `main':
/home/jharvard/test.c:6: undefined reference to `GetString'
clang: error: linker command failed with exit code 1 (use -v to see invocation)

/tmp/test-a37875.o: In function `main':
/home/jharvard/test.c:6: undefined reference to `sqrt'
clang: error: linker command failed with exit code 1 (use -v to see invocation)

test.c:8:1: error: control reaches end of non-void function [-Werror,-Wreturn-type]
}
^

test.c:7:12: error: incompatible pointer to integer conversion returning 'char *' from a function with result type 'int' [-Werror,-Wint-conversion]
    return x;
           ^

test.c:7:13: error: implicit conversion from 'double' to 'int' changes value from 3.14 to 3 [-Werror,-Wliteral-conversion]
    int x = 3.14;
        ~   ^~~~

"Try looking at something *before* this line of code?"
